--- a/styles.css
+++ b/styles.css
@@ -1,201 +1,175 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-
-:root {
-  --primary-color: #28bf96;
-  --primary-color-dark: #209677;
-  --text-dark: #111827;
-  --text-light: #6b7280;
-  --white: #ffffff;
-}
+/* 
+CSS Global Styling
+Author: Anbuselvan Rocky
+*/
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px 10%;
+    background: transparent;
+}
+
+.logo {
+    cursor: pointer;
+    margin-right: auto;
+}
+
+li,
+a,
+button {
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+    color: #FFF;
+}
+
+nav ul li {
+    display: inline-block;
+    padding: 0px 40px;
+}
+
+nav ul li a {
+    transition: all 0.3s ease 0s;
+}
+
+nav ul li a:hover {
+    color: #000;
+    transition: all 0.3s ease 0s;
+}
+
+header > button {
+    padding: 9px 25px;
+    background-color: #4caf50;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+header > button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+}
+
+/* Content */
+.wrapper {
+    background: url('../img/hero-bg-1.jpg') no-repeat center center / cover;
+    width: 100%;
+    display: block;
+    position: relative;
+    z-index: 1; 
+}
+
+.wrapper:before {
+    position: absolute;
+    content: '';
+    background-image: linear-gradient(to right, rgba(32, 40, 119, 0.95), rgba(55, 46, 149, 0.95), rgba(83, 49, 177, 0.90), rgba(114, 48, 205, 0.85), rgba(150, 41, 230, 0.95));
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+
+.content {
+    display: flex;
+    padding: 80px 10%;
+    justify-content: space-between;
+    color: #FFF;
+}
+
+.hero-info h1 {
+    font-size: 40px;
+}
+
+.hero-info p {
+    margin: 30px 0;
+    font-weight: 400;
+    line-height: 2;
+
+}
+
+.locale {
+    animation-name: colorChange;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
 
 .btn {
-  padding: 1rem 2rem;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  color: var(--white);
-  background-color: var(--primary-color);
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.btn:hover {
-  background-color: var(--primary-color-dark);
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-}
-
-.container {
-  max-width: 1200px;
-  margin: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-nav {
-  padding: 2rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-}
-
-.nav__logo {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--primary-color);
-}
-
-.nav__links {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.link a {
-  text-decoration: none;
-  color: var(--text-light);
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.link a:hover {
-  color: var(--primary-color);
-}
-
-.header {
-  padding: 0 1rem;
-  flex: 1;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-  align-items: center;
-}
-
-.content h1 {
-  margin-bottom: 1rem;
-  font-size: 3rem;
-  font-weight: 700;
-  color: var(--text-dark);
-}
-
-.content h1 span {
-  font-weight: 400;
-}
-
-.content p {
-  margin-bottom: 2rem;
-  color: var(--text-light);
-  line-height: 1.75rem;
-}
-
-.image {
-  position: relative;
-  text-align: center;
-  isolation: isolate;
-}
-
-.image__bg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 450px;
-  width: 450px;
-  background-color: var(--primary-color);
-  border-radius: 100%;
-  z-index: -1;
-}
-
-.image img {
-  width: 100%;
-  max-width: 475px;
-}
-
-.image__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 1rem 2rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  text-align: left;
-  background-color: var(--white);
-  border-radius: 5px;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-}
-
-.image__content__1 {
-  transform: translate(calc(-50% - 12rem), calc(-50% - 8rem));
-}
-
-.image__content__1 span {
-  padding: 10px 12px;
-  font-size: 1.5rem;
-  color: var(--primary-color);
-  background-color: #defcf4;
-  border-radius: 100%;
-}
-
-.image__content__1 h4 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--text-dark);
-}
-
-.image__content__1 p {
-  color: var(--text-light);
-}
-
-.image__content__2 {
-  transform: translate(calc(-50% + 8rem), calc(-50% + 10rem));
-}
-
-.image__content__2 ul {
-  list-style: none;
-  display: grid;
-  gap: 1rem;
-}
-
-.image__content__2 li {
-  display: flex;
-  align-items: flex-start;
-  gap: 0.5rem;
-  color: var(--text-light);
-}
-
-.image__content__2 span {
-  font-size: 1.5rem;
-  color: var(--primary-color);
-}
-
-@media (width < 900px) {
-  .nav__links {
-    display: none;
-  }
-
-  .header {
-    padding: 1rem;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .content {
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
     text-align: center;
-  }
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
 
-  .image {
-    grid-area: 1/1/2/2;
-  }
+.btn-outline {
+    border-radius: 30px;
+    color: #ffffff;
+    border-color: #ffffff;
+    padding: 12px 30px;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+.btn-outline:hover {
+    background: #ffffff;
+    color: #6730e3;
+}
+
+i.fa {
+    margin-right: 10px;
+}
+
+.social-links {
+    padding: 20px;
+    margin-top: 140px;
+}
+
+.social-links ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.btn-social {
+    padding: 9px 25px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+.bg-facebook {
+    background-color: #4267B2;
+}
+
+.bg-youtube {
+    background-color: #FF0000;
+}
+
+.bg-instagram {
+    background-color: #C13584;
 }
